--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.68.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
